--- a/CT06/Question 1/index.html
+++ b/CT06/Question 1/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="container">
+        <h1>S/N</h1>	<h2>Course Name	Grade</h2>	<h3>Semester</h3>
+<h4>001</h4>	<h5>Web Development</h5>	<h6>A+</h6>	<h7>Semester 1</h7>
+<h8>002</h8>	<h9>Minecraft Python</h9>	<h10>B+</h10>	</h11>Semester 1</h11>
+<h12>003</h12>	<h13>Scratch</h13>	<h14>B+</h14>	<h15>Semester 1</h15>
         
     </div>
 </body>
