--- a/CT06/Question 2/index.html
+++ b/CT06/Question 2/index.html
@@ -9,5 +9,11 @@
     <link href="script/bootstrap.css" rel="stylesheet"/>
 </head>
 <body>
+    let radius = 5;
+let PI = 3.14159;
+function area_circle() {
+  console.log(PI * radius * radius);
+}
+area_circle();
 </body>
 </html>
